<resources>
    <string name="app_name">FotoApp</string>
    <string name="titulo">Título</string>
    <string name="titulo2">FotoApp</string>
    <string name="senha">Senha</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="novo_usuario">Cadastrar Usuário</string>
    <string name="nome">Nome</string>
    <string name="nome_usuario">Nome do Usuário</string>
    <string name="email">E-mail do usuário</string>
    <string name="login">Login do usuário</string>
    <string name="salvar">Salvar</string>
    <string name="cadastro">Cadastro</string>
    <string name="tira_foto">TIRA FOTO DIRETO</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="salvar_coordenada">SALVAR COORDENADAS!!</string>
    <string name="tirar_foto">Tirar Foto!!</string>
</resources>
