<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NovoUsuarioActivity">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.5"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtNome"
            android:gravity="center" app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="12dp">
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblBlog" android:textSize="24sp"
                android:textAllCaps="false"
        />
        <TextView
                android:text="@string/cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblRegistro" android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="14"
            android:id="@+id/txtNome" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtEmail" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/nome_usuario"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="14"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/email" android:id="@+id/txtEmail"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="14"
            android:id="@+id/txtSenha" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:hint="@string/senha"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtLogin"/>
    <Button
            android:text="@string/salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSalvar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSenha" app:layout_constraintEnd_toEndOf="@+id/txtSenha"
            app:layout_constraintStart_toStartOf="@+id/txtSenha" android:onClick="cadastrarUsuario"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="14"
            android:id="@+id/txtLogin" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/login"/>

</android.support.constraint.ConstraintLayout>