<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNomeUsuario" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lblTitulo" android:hint="@string/nome_usuario"/>
    <TextView
            android:text="@string/titulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTitulo" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent" android:textStyle="bold" android:textSize="120px"
            android:textColor="@color/colorAccent" app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtSenha" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="21dp" app:layout_constraintTop_toBottomOf="@+id/txtNomeUsuario"
            android:hint="@string/senha"/>
    <Button
            android:text="Tirar foto!!"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnTirarFoto" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/ckManterConectado" android:onClick="fazerLogin"/>
    <CheckBox
            android:text="@string/manter_conectado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckManterConectado" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSenha" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/novo_usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnNovoUsuario" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnTirarFoto" android:onClick="cadastrarNovoUsuario"/>
</android.support.constraint.ConstraintLayout>