<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TirarFotoActivity">

    <Button
            android:text="@string/salvar_coordenada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSalvarCoordenada2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnTirarFoto"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:id="@+id/txtLatitude2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLatitude" android:hint="Longitude do GPS"
            android:textSize="25sp"/>
    <TextView
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold" android:textSize="25sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lblLatitude"/>
    <ImageView
            android:layout_width="383dp"
            android:layout_height="252dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imgView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:scaleType="fitXY"/>
    <TextView
            android:text="@string/latitude"
            android:layout_width="113dp"
            android:layout_height="33dp"
            android:id="@+id/lblLatitude" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/imgView"
            android:layout_marginTop="16dp" android:textStyle="bold" android:textSize="25sp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:id="@+id/txtLatitude" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/lblLatitude"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:hint="Latitude do GPS"
            android:textSize="25sp" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imgView"/>
    <Button
            android:text="@string/tirar_foto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnTirarFoto" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLatitude2" app:layout_constraintHorizontal_bias="1.0"
            android:onClick="tirarFoto"/>
</android.support.constraint.ConstraintLayout>